--- a/css/style.css
+++ b/css/style.css
@@ -776,7 +776,7 @@ html.is-animating .transition-fade2 {
 }
 
 .pg-1_bk_2_aston {
-  background: #007556 !important;
+  background: #00251b !important;
 }
 
 .img_as img {
