--- a/css/style.css
+++ b/css/style.css
@@ -236,11 +236,13 @@ html.is-animating .transition-fade2 {
   justify-content: center;
   align-items: center;
   transition: 1s cubic-bezier(0.64, -0.01, 0, 1.01);
+  border-radius: 60px;
 }
 
 .grid-item_img_main {
   width: 100%;
   height: 100%;
+  border-radius: 0px;
 }
 
 .item_img_main_2 {
