--- a/css/style.css
+++ b/css/style.css
@@ -1975,9 +1975,75 @@ html.has-scroll-dragging {
   bottom: 0;
 }
 
-.text_anim_preload {
-  top: 45% !important;
-  opacity: 1 !important;
+.notify {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: end;
+  pointer-events: none;
+}
+
+.notify h2 {
+  height: -webkit-min-content;
+  height: -moz-min-content;
+  height: min-content;
+  padding: 10px;
+  font-size: 1.2rem;
+  border-radius: 20px;
+  background-color: rgba(238, 238, 238, 0.4392156863);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  -webkit-backdrop-filter: blur(8px);
+  backdrop-filter: blur(8px);
+  transform: translateY(200%);
+}
+
+.notify_on {
+  -webkit-animation: notify 6s cubic-bezier(0.48, 1.33, 0.67, 1.06);
+          animation: notify 6s cubic-bezier(0.48, 1.33, 0.67, 1.06);
+  -webkit-animation-delay: 2s;
+          animation-delay: 2s;
+}
+
+@-webkit-keyframes notify {
+  0% {
+    transform: translateY(0%);
+  }
+
+  10% {
+    transform: translateY(-15%);
+  }
+
+  90% {
+    transform: translateY(-15%);
+  }
+
+  100% {
+    transform: translateY(0%);
+  }
+}
+
+@keyframes notify {
+  0% {
+    transform: translateY(0%);
+  }
+
+  10% {
+    transform: translateY(-15%);
+  }
+
+  90% {
+    transform: translateY(-15%);
+  }
+
+  100% {
+    transform: translateY(0%);
+  }
 }
 
 #preloader {
@@ -1991,7 +2057,7 @@ html.has-scroll-dragging {
   display: flex;
   justify-content: center;
   align-items: center;
-  transition: 1s;
+  transition: 0.9s;
   opacity: 1;
 }
 
