--- a/css/style.css
+++ b/css/style.css
@@ -320,6 +320,7 @@ html.is-animating .transition-fade2 {
   align-items: center;
   justify-content: center;
   will-change: transform;
+  transition: 0.75s cubic-bezier(0.65, 0.02, 0.23, 1);
 }
 
 .scroll_imgbox img {
@@ -370,7 +371,7 @@ html.is-animating .transition-fade2 {
           animation: click_2 0.35s cubic-bezier(0.48, 1.33, 0.67, 1.06);
 }
 
-#link_home {
+.link_home {
   position: absolute;
   top: 0;
   left: 0;
