--- a/css/style.css
+++ b/css/style.css
@@ -122,8 +122,7 @@ li a {
 }
 
 .transition-fade {
-  transition: 0.5s;
-  transition-delay: 0.3s;
+  transition: 0.3s;
   opacity: 1;
 }
 
@@ -132,7 +131,7 @@ html.is-animating .transition-fade {
 }
 
 .transition-down {
-  transition: 0.4s;
+  transition: 0.3s;
   opacity: 1;
   transform: scale(100%) translateY(0%);
 }
@@ -1756,10 +1755,10 @@ html.is-animating .transition-fade2 {
   transition: 0.5s;
   position: absolute;
   width: 100%;
+  background-color: white !important;
 }
 
 .body_mob {
-  background-color: white !important;
   overflow: visible;
 }
 
@@ -1823,6 +1822,10 @@ html.is-animating .transition-fade2 {
 .anim-w {
   transform: scale(200%);
   transition: 0.25s ease-out;
+}
+
+.block_main_home {
+  max-width: 700px !important;
 }
 
 .mobile_pic {
@@ -1938,10 +1941,6 @@ html.is-animating .transition-fade2 {
 }
 
 /*! locomotive-scroll v4.1.3 | MIT License | https://github.com/locomotivemtl/locomotive-scroll */
-
-html.has-scroll-smooth {
-  overflow: hidden;
-}
 
 html.has-scroll-dragging {
   -webkit-user-select: none;
