--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ Theme Name: Fybrid Studio
   margin: 0;
   border: 0;
   font-family: "Open Sans", sans-serif;
+  scroll-behavior: auto !important;
 }
 
 ::-webkit-scrollbar {
@@ -15,7 +16,6 @@ Theme Name: Fybrid Studio
 
 body {
   margin: 0px;
-  overflow: hidden;
   -webkit-user-select: none;
      -moz-user-select: none;
           user-select: none;
