--- a/css/style.css
+++ b/css/style.css
@@ -1517,7 +1517,7 @@ html.is-animating .transition-fade2 {
   top: 0;
   left: 0;
   width: 100vw;
-  height: 100lvh;
+  height: 100vh;
   align-items: center;
   justify-content: center;
   text-align: center;
@@ -1823,6 +1823,7 @@ html.has-scroll-dragging {
 
   .mob_on {
     width: 100% !important;
+    padding: 0px 50px !important;
   }
 
   .mob_on2 {
@@ -1835,6 +1836,15 @@ html.has-scroll-dragging {
 
   .mob_on4 {
     width: 15% !important;
+  }
+
+  .mob_pic {
+    padding: 50px;
+    background-color: #fff !important;
+  }
+
+  .mob_pic img {
+    border-radius: 20px;
   }
 
   .pg-1_bk_2 {
