--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,7 @@ body {
 
 #swup {
   background-color: #ffffff;
+  overflow: hidden;
 }
 
 header {
@@ -1693,7 +1694,7 @@ html.is-animating .transition-fade2 {
 }
 
 .carousel-items {
-  transition: transform 0.3s cubic-bezier(0.48, 1.33, 0.67, 1.06) !important;
+  transition: transform 0.45s cubic-bezier(0.48, 1.33, 0.67, 1.06) !important;
 }
 
 @media screen and (max-width: 1100px) {
@@ -1819,7 +1820,7 @@ html.is-animating .transition-fade2 {
   }
 
   .pg-1_bk_2 h2 {
-    font-size: 3rem !important;
+    font-size: 2rem !important;
   }
 
   #carouselExampleIndicators {
