--- a/css/style.css
+++ b/css/style.css
@@ -1694,7 +1694,68 @@ html.is-animating .transition-fade2 {
 }
 
 .carousel-items {
-  transition: transform 0.45s cubic-bezier(0.48, 1.33, 0.67, 1.06) !important;
+  transition: transform 0.3s cubic-bezier(0.48, 1.33, 0.67, 1.06) !important;
+}
+
+.mobile-carusel {
+  overflow-x: scroll;
+  white-space: nowrap;
+}
+
+.mobile-carusel-item {
+  display: inline-block;
+  width: 50%;
+}
+
+.pswp__img {
+  border-radius: 35px;
+}
+
+.pswp__img--placeholder {
+  border-radius: 12px;
+}
+
+.pswp__container {
+  transition: transform 0.35s ease-in-out;
+}
+
+.pswp__button--arrow {
+  width: 10% !important;
+  height: 100vh !important;
+  top: 0 !important;
+  margin-top: 0px !important;
+}
+
+.pswp__bullets-indicator {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  position: absolute;
+  bottom: 30px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.pswp__bullet {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: rgba(255, 255, 255, 0.6352941176);
+  margin: 0 5px;
+}
+
+.pswp__bullet--active {
+  background: rgb(255, 255, 255);
+}
+
+.pswp--no-mouse-drag.pswp--zoomed-in .pswp__img,
+.pswp--no-mouse-drag.pswp--zoomed-in .pswp__img:active,
+.pswp__img {
+  cursor: auto !important;
+}
+
+.pswp__counter {
+  display: none;
 }
 
 @media screen and (max-width: 1100px) {
