--- a/css/style.css
+++ b/css/style.css
@@ -16,15 +16,17 @@ Theme Name: Fybrid Studio
 
 body {
   margin: 0px;
-  -webkit-user-select: none;
-     -moz-user-select: none;
-          user-select: none;
   transition: 0.5s;
   background-color: #1c1c1c;
 }
 
 #swup {
   background-color: #ffffff;
+}
+
+.pagework,
+.page1 {
+  overflow: hidden;
 }
 
 header {
@@ -464,6 +466,7 @@ html.is-animating .transition-fade2 {
   position: relative;
   padding-top: 15%;
   height: 1300px;
+  overflow: hidden;
 }
 
 .tasks_box .row {
@@ -566,6 +569,21 @@ html.is-animating .transition-fade2 {
   background-color: #1E7A51;
   border-radius: 40px;
   padding: 45px;
+}
+
+.userflow .col-12::-webkit-scrollbar {
+  background-color: #181818;
+  width: 16px;
+}
+
+.userflow .col-12::-webkit-scrollbar-thumb {
+  background-color: #babac0;
+  border-radius: 16px;
+  border: 4px solid #181818;
+}
+
+.userflow .col-12::-webkit-scrollbar-button {
+  display: none;
 }
 
 .aston_home {
@@ -683,6 +701,7 @@ html.is-animating .transition-fade2 {
 }
 
 .pj_ad {
+  overflow: hidden;
   padding: 150px 0px;
   background-color: #191919;
 }
@@ -1413,6 +1432,12 @@ html.is-animating .transition-fade2 {
   top: 0vh;
   left: 5vh;
   height: 100%;
+  opacity: 0;
+}
+
+.left_box_bar_on {
+  opacity: 1;
+  transition: 1s;
 }
 
 .con-off-mob {
@@ -1613,6 +1638,10 @@ html.is-animating .transition-fade2 {
   padding-left: 1.6vh !important;
 }
 
+.rows_3 {
+  position: relative;
+}
+
 .background_elipse {
   overflow: hidden;
   position: absolute;
@@ -1620,7 +1649,7 @@ html.is-animating .transition-fade2 {
   left: 0;
   height: 100%;
   width: 100%;
-  z-index: -1;
+  z-index: 0;
 }
 
 .el-1 {
@@ -2105,21 +2134,17 @@ html.is-animating .transition-fade2 {
     text-align: center;
   }
 
-  ::-webkit-scrollbar {
-    display: none;
-  }
-
-  .c-scrollbar {
-    display: none;
-  }
-
   .mob_off_obj {
-    display: none;
+    display: none !important;
   }
 
   .mob_on_obj {
     width: 100% !important;
     margin-bottom: 50px;
+  }
+
+  .mob_on_obj p {
+    width: 100%;
   }
 
   .mob_on_full {
@@ -2129,7 +2154,14 @@ html.is-animating .transition-fade2 {
   .avatarCenter_mob {
     left: 50% !important;
     right: auto !important;
-    top: -50% !important;
+    top: -40% !important;
+    transform: translateX(-50%);
+  }
+
+  .avatarCenter_mob2 {
+    left: 50% !important;
+    right: auto !important;
+    top: -30% !important;
     transform: translateX(-50%);
   }
 
@@ -2233,6 +2265,28 @@ html.is-animating .transition-fade2 {
   .friesa-col {
     width: 33.33333333% !important;
   }
+
+  .tasks_box {
+    height: 1600px;
+  }
+
+  .tasks_box .col-9 {
+    border: 0px;
+    -webkit-backdrop-filter: blur(0px);
+            backdrop-filter: blur(0px);
+  }
+
+  .black_box .circle {
+    width: 80%;
+  }
+
+  .userflow .col-12 {
+    overflow-x: scroll;
+  }
+
+  .userflow .col-12 img {
+    width: 200% !important;
+  }
 }
 
 @media screen and (max-width: 736px) and (max-height: 414px) {
@@ -2295,5 +2349,17 @@ html.is-animating .transition-fade2 {
 
   .fonts_colors_con {
     max-width: 100% !important;
+  }
+
+  .pg-1_bk_3 .row {
+    padding-bottom: 0px;
+  }
+
+  .pg-1_bk_3 .color_bl_1 {
+    border-radius: 0px 0px 0px 0px;
+  }
+
+  .pg-1_bk_3 .color_bl_3 {
+    border-radius: 0px 0px 0px 0px;
   }
 }
